# halo-mi-health

./: .gitignore  index.html  package-lock.json  package.json  railway.json  server.mjs  tsconfig.json  vite.config.ts
.cargo/: config.toml
public/: manifest.json  sw.js
scripts/: apply-migration.mjs  generate-icons.js  migrate.js
src/: App.tsx  capacitor-health.d.ts  index.css  main.tsx
src-tauri/: Cargo.toml  dlltool-wrapper.bat  print_env.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs  models.rs  supabase.rs
src/components/: skeletons.tsx
src/components/records/: handwritten-note-upload.tsx  image-preview.tsx
src/components/shared/: DataExport.tsx  (+8 more)
src/lib/: calculateHealthScore.ts  registerSW.ts  smartReminders.ts  streaks.ts  tauri.ts  tfHealthPredictor.ts  triage-engine.ts  useOnlineStatus.ts  utils.ts
src/pages/: Conditions.tsx  Emergency.tsx  HealthChecks.tsx  Landing.tsx  Login.tsx  Medications.tsx  Messages.tsx  NewConsultation.tsx  PatientDashboard.tsx  Profile.tsx  ProviderConsultations.tsx  ProviderPatients.tsx  ProviderRecords.tsx  ProviderSchedule.tsx  Register.tsx  Reminders.tsx  Share.tsx  Timeline.tsx  Vault.tsx
src/types/: index.ts
supabase/migrations/: 00001_initial_schema.sql  00002_add_profile_insert_policy.sql  00002_emergency_info.sql  00002_storage_bucket.sql  00003_make_provider_id_nullable.sql  00004_fix_patient_records_rls.sql  00005_reminders.sql  00006_health_features.sql  00007_fix_rls_and_policies.sql  00008_health_features_v2.sql
(+25 files in other folders)
