[package]
name = "halo-mi-health"
version = "0.1.0"
edition = "2021"

[lib]
name = "halo_mi_health_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[profile.release]
strip = true
lto = "thin"
codegen-units = 1
opt-level = "z"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
